# zip-file-viewer

./: package-lock.json  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  recent_files.json  tauri.conf.json
src-tauri/sample_folder/subfolder/: file3.txt
src-tauri/src/: main.rs
