[package]
name = "new-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[dependencies]
zip = "0.5.13"
tauri = { version = "1.3", features = ["fs-all", "dialog-all", "path-all", "devtools", "shell-open", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", package = "tauri-plugin-store" }
tokio = { version = "1.0", features = ["full"] }
devtools = "0.3.2"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
directories = "4.0"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

